[gd_scene load_steps=3 format=3 uid="uid://cho1mjxxemfva"]

[ext_resource type="Theme" uid="uid://k1wwefkpb70t" path="res://Game/ui/game_theme.tres" id="1_80lxg"]
[ext_resource type="Script" uid="uid://bl0jdibvk1wil" path="res://Game/cheat_items.gd" id="2_kkbhl"]

[node name="CheatItems" type="MarginContainer"]
theme = ExtResource("1_80lxg")
script = ExtResource("2_kkbhl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cheat Items:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ItemTypeSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true

[node name="MinusButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "-"

[node name="AmountText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="PlusButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+"

[node name="AddItemsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="editing_toggled" from="VBoxContainer/HBoxContainer/AmountText" to="." method="_on_amount_text_editing_toggled"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/AmountText" to="." method="_on_amount_text_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddItemsButton" to="." method="_on_add_items_button_pressed"]
